@@ -1,3 +1,12 @@
+2008-04-24  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-security/eap-method-peap.c
+		- (eap_method_peap_new): fix population of anonymous identity
+
+	* src/wireless-security/eap-method-ttls.c
+		- (inner_auth_combo_init): populate phase2 auth method correctly
+		- (eap_method_ttls_new): fix population of anonymous identity
+
 2008-04-22  Dan Williams  <dcbw@redhat.com>
 
 	* src/gconf-helpers/gconf-helpers.c
